3.2.3
	+ Fixed logs summarized report
3.2.2
	+ Update strings to new offering
	+ Added missing EBox::Exceptions uses
3.2.1
	+ Avoid call to mailfilter-ldap script from enableActions
3.2
	+ Set version to 3.2
3.1.4
	+ Set ham and spam users as internal when migrating from 3.0
3.1.3
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
	+ Adapted mailfilter-ldap script to the new users API
3.1.2
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Removed dkim_verification obsolete option from the local conf
	+ Adapt firewall rules to new accept chains
	+ Updated to use the new User API.
	+ Added incompatiblity with external AD authentication mode
3.1.1
	+ Use new EBox::Users namespace instead of EBox::UsersAndGroups
3.1
	+ Removed 3.0.X migration code
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.5
	+ Fixed spam/ham mail account check to not fail if the user does
	  not exists. This avoids a dashboard error.
	+ Fixed LDAP reprovision to recreate ham and spam users
3.0.4
	+ Fixed missing use statement in MailfilterACL model
	+ Added dependencies and fixes needed for better sa tests
	+ Dont run spamd daemon
	+ Fixed regression in creation of ham/spam mail aliases due to changes
	  in the users API
	+ Adapted learnspamd to changes in user module API
3.0.3
	+ Reworked log helper to remove POP proxy and adapt to changes in
	  base class
3.0.2
	+ Removed POP proxy logs from log table, fixed bug which make
	  summarized smtp filter report page to be blank
3.0.1
	+ Fixed bad filter error at EBox::Mailfilter::VDomainsLdap::_hasAccount
2.3.8
	+ Fixed wrong retrieval of VDomains model
2.3.7
	+ Fixed virtual domain policies tab
2.3.6
	+ Move report code to remoteservices
	+ Fixed LDAP url in amavisd.conf
2.3.5
	+ VDomains model renamed to VDomainsFilter
	+ Mailfilter is now under Communications instead of UTM
	+ Disabled POP3 Proxy