@@ -1,3 +1,5 @@
+HEAD
+	+ Fixed running status of module components
 3.2.3
 	+ Fixed logs summarized report
 3.2.2
